# DriverBench

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: RunDeterminismTest.cmake
src/: driverbench_cli.c  driverbench_cli.h  driverbench_main.c  gl1.5gles1.1.c  vulkan1.2multi.c
src/config/: benchmark_config.h
src/core/: db_buffer_convert.c  db_buffer_convert.h  db_core.c  db_core.h  db_hash.c  db_hash.h
src/displays/: README.md  bench_config.h  display_dispatch.c  display_dispatch.h  display_env_common.h  display_gl_hash_readback_common.h  display_gl_runtime_common.h  display_hash_common.h
src/displays/glfw_window/: display_glfw_window.c  display_glfw_window_common.c  display_glfw_window_common.h  display_glfw_window_cpu_renderer.c  display_glfw_window_gl_hash_common.h  display_glfw_window_opengl_gl1_5_gles1_1.c  display_glfw_window_opengl_gl3_3.c  display_glfw_window_vulkan_1_2_multi_gpu.c
src/displays/linux_kms_atomic/: display_linux_kms_atomic.c  display_linux_kms_atomic_common.c  display_linux_kms_atomic_common.h  display_linux_kms_atomic_opengl_gl1_5_gles1_1.c  display_linux_kms_atomic_opengl_gl3_3.c
src/displays/offscreen/: display_offscreen.c  display_offscreen_cpu_renderer.c  display_offscreen_sanitizer.c
src/renderers/: README.md  renderer_bands_common.h  renderer_benchmark_common.h  renderer_gl_common.c  renderer_gl_common.h  renderer_gles_common.c  renderer_identity.h  renderer_opengl_capabilities.c  renderer_opengl_capabilities.h  renderer_opengl_common.c  renderer_opengl_common.h  renderer_snake_common.h  renderer_snake_shape_common.h
src/renderers/cpu_renderer/: renderer_cpu_renderer.c  renderer_cpu_renderer.h
src/renderers/opengl_gl1_5_gles1_1/: renderer_opengl_gl1_5_gles1_1.c  renderer_opengl_gl1_5_gles1_1.h
src/renderers/opengl_gl3_3/: renderer_opengl_gl3_3.c  renderer_opengl_gl3_3.h
src/renderers/vulkan_1_2_multi_gpu/: renderer_vulkan_1_2_multi_gpu.c  renderer_vulkan_1_2_multi_gpu.h  renderer_vulkan_1_2_multi_gpu_frame.c  renderer_vulkan_1_2_multi_gpu_init.c  renderer_vulkan_1_2_multi_gpu_internal.h  renderer_vulkan_1_2_multi_gpu_runtime.c  renderer_vulkan_1_2_multi_gpu_scheduler.c  renderer_vulkan_1_2_multi_gpu_swapchain.c
src/shaders/: shader_opengl_gl3_3_rect.frag  shader_opengl_gl3_3_rect.vert  shader_vulkan_1_2_rect.frag  shader_vulkan_1_2_rect.vert
